# tractographyGaussianProcesses

./: .gitignore  CMakeLists.txt  License.txt  README  setup.py  setup.py.in
example/: MNI_tq_01248_af.left.vtk  MNI_tq_01248_af.right.vtk  MNI_tq_01302_af.left.vtk  MNI_tq_01302_af.right.vtk  MNI_tq_01323_af.left.vtk  MNI_tq_01323_af.right.vtk  example.py
scripts/: generateAggloClustering  getPrototypeTract  get_image_from_bundle  tractQuerier
tractographyGP/: __init__.py  _bounded_thinPlate.f  _bounded_thinPlate.py  agglomerativeClustering.py  dendrogramAtlasAnalysis.py  fiberGPAnalysis.py  readVtkPolyData_ext.cpp  slicerInterface.py  straightenImage.py  tractography.py  vtkInterface.py
